samples/_failures_safe/1761355216_46921d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eee1d075.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_eee1d075.c:157:13: error: expected expression at end of input
  157 |             case
      |             ^~~~
./samples/SAFE/__tmp_eee1d075.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eee1d075.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eee1d075.c:157:13: error: expected declaration or statement at end of input
